# easy-dlib_face_aligner_and_encoder

./: CMakeLists.txt  dlib_ext.cpp  dlib_ext.h  test.py  testpadding.cpp
